--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <title>Password Generator</title>
 </head>
 <body>
-    
+    <h1>Password Generator</h1>
+    <p>Password goes here</p>
+    <button onclick = "genPassword()">Generate</button>
+    <button onclick = "copy()">Copy to Clipboard</button>
 </body>
 </html>
