--- a/index.html
+++ b/index.html
@@ -4,12 +4,27 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <title>Password Generator</title>
 </head>
 <body>
-    <h1>Password Generator</h1>
-    <p>Password goes here</p>
-    <button onclick = "genPassword()">Generate</button>
-    <button onclick = "copy()">Copy to Clipboard</button>
+    <div class = "row justify-content-center">
+        <h1>Password Generator</h1>
+    </div>
+    <div class = "container">    
+        <div class = "jumbotron">
+            <h2>Generate a Password</h2>
+            <hr>
+            <form>
+                <div class = "form-group">
+                    <textarea class="form-control" placeholder="Your secure password" id="pass" rows="5"></textarea>
+                </div>
+            </form>
+            <hr>
+            <button type = "button" class = "btn btn-primary" onclick = "genPassword()">Generate Password</button>
+            <button type = "button" class = "btn btn-secondary" onclick = "copy()">Copy to Clipboard</button>
+        </div>
+    </div>
 </body>
+<script src = "assets/javascript.js"></script>
 </html>
